<resources>

    <string name="app_name">pr14_rmp</string>
    <string name="all_clean">AC</string>
    <string name="back">&#9003;</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equally">=</string>
    <string name="comma">,</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="calculator">Калькулятор</string>
    <string name="zero">0</string>
</resources>